# framework16-led-info-display

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  flake.nix
src/: main.cpp
src/lib/: preset.hpp  usb.cpp  usb.hpp
src/lib/inputmodule/: font.cpp  font.hpp  inputmodule.cpp  inputmodule.hpp  ledmatrix.cpp  ledmatrix.hpp
src/lib/ledmatrix/: font.hpp  ledmatrix.cpp  ledmatrix.hpp
src/lib/usb/: usb.cpp  usb.hpp
src/lib/window/: window.cpp  window.hpp
src/preset/: clock.hpp
tests/: CMakeLists.txt  animate.cpp  pattern_count.cpp  pattern_double_gradient.cpp  pattern_equalizer.cpp  pattern_full_brightness.cpp  pattern_gradient.cpp  pattern_lotus.cpp  pattern_lotus2.cpp  pattern_panic.cpp  pattern_percentage.cpp  pattern_symbols.cpp  pattern_text.cpp  pattern_zigzag.cpp
